@@ -1,2 +1,2 @@
-bitcoin: 0xbF333cCf6a3dE275E1fD1e236b2aE468EE1137A7
-ethereum: 0xCcEF4F75f8cf91956D63dCbdAA3E3a81763b915A
+bitcoin: 0x07119018C1c1E20dD8B4c20fC9C2B98B5FC4E63a
+ethereum: 0x9De5C7226d11506e225E0587c4D7e1E3CBBd5C42
